--- a/homeworks/homework4/homework4.tex
+++ b/homeworks/homework4/homework4.tex
@@ -192,9 +192,9 @@ X-conditional coverage more deeply from theoretical and practical angles.
 
   Start with the absolute residual as your conformity score, and then compare
   its approximate conditional coverage performance to at least one other
-  conformity score (a number of choices are availability), where you have
-  designed the latter to do better in your simulation. Note: split conformal is
-  fine to use throughout. 
+  conformity score (a number of choices are available), where you have designed
+  the latter to do better in your simulation. Note: split conformal is fine to
+  use throughout.  
   \marginpar{\small [10 pts]}
 \end{enumerate}
 
