--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-03-30 05:30:55 -0700 
+%% Created for Ryan Tibshirani at 2023-04-03 10:47:10 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{angelopoulos2021uncertainty,
+	author = {Anastasios N. Angelopoulos and Stephen Bates and Jitendra Malik and Michael I. Jordan},
+	booktitle = {Proceedings of the International Conference on Learning Representations},
+	date-added = {2023-04-03 10:42:53 -0700},
+	date-modified = {2023-04-03 10:46:20 -0700},
+	title = {Uncertainty sets for image classifiers using conformal prediction},
+	year = {2021}}
+
+@inproceedings{romano2019conformalized,
+	author = {Romano, Yaniv and Patterson, Evan and Cand{\`e}s, Emmanuel J.},
+	booktitle = {Advances in Neural Information Processing Systems},
+	date-added = {2023-04-03 10:16:28 -0700},
+	date-modified = {2023-04-03 10:16:28 -0700},
+	title = {Conformalized quantile regression},
+	year = {2019}}
 
 @article{angelopoulos2023gentle,
 	author = {Anastasios N. Angelopoulos and Stephen Bates},
@@ -45,9 +61,9 @@
 
 @inproceedings{richards2021asymptotics,
 	author = {Dominic Richards and Jaouad Mourtada and Lorenzo Rosasco},
-	booktitle = {International Conference on Artificial Intelligence and Statistics},
+	booktitle = {Proceedings of the International Conference on Artificial Intelligence and Statistics},
 	date-added = {2023-03-14 20:04:45 -0700},
-	date-modified = {2023-03-14 20:06:36 -0700},
+	date-modified = {2023-04-03 10:47:10 -0700},
 	title = {Asymptotics of ridge (less) regression under general source condition},
 	year = {2021}}
 
@@ -843,12 +859,12 @@
 	title = {The Multiple Quantile Graphical Model},
 	year = {2016}}
 
-@inproceedings{romano2019conformalized,
-	author = {Romano, Yaniv and Patterson, Evan and Cand{\`e}s, Emmanuel J.},
+@inproceedings{romano2020classification,
+	author = {Romano, Yaniv and Sesia, Matteo and Cand{\`e}s, Emmanuel J.},
 	booktitle = {Advances in Neural Information Processing Systems},
-	date-modified = {2022-09-27 21:27:51 -0700},
-	title = {Conformalized quantile regression},
-	year = {2019}}
+	date-modified = {2023-04-03 10:17:06 -0700},
+	title = {Classification with valid and adaptive coverage},
+	year = {2020}}
 
 @inproceedings{kivaranovic2020adaptive,
 	author = {Danijel Kivaranovic and Kory D. Johnson and Hannes Leeb},
@@ -6523,8 +6539,9 @@
 	title = {A Practical Guide to Splines},
 	year = 1978}
 
-@unpublished{parqp,
-	author = {Michael J Best},
+@unpublished{best1982,
+	author = {Michael J. Best},
+	date-modified = {2023-04-03 10:44:07 -0700},
 	note = {CORR Report 82--84, University of Waterloo},
 	title = {An algorithm for the solution of the parametric quadratic programming problem},
 	year = 1982}
