--- a/homeworks/homework4/homework4.tex
+++ b/homeworks/homework4/homework4.tex
@@ -13,7 +13,7 @@ Due Friday April 14 at 5pm}
 \RaggedRight
 \vspace{-50pt}
 
-\section{Basic fact about CDFs and quantiles [15 points]}
+\section{Basic fact about CDFs and quantiles [14 points]}
 
 In this exercise, we'll walk through a number of basic but important facts about 
 quantiles and cumulative distribution functions (CDFs). Let $F$ be a CDF, of the
@@ -73,7 +73,7 @@ F(x) = \lim_{y \to x^+} F(y)
   
 \item Give a concrete worked example to show when equality fails in the result  
   in part (d).
-  \marginpar{\small [1 pt]}
+  \marginpar{\small [2 pts]}
 
 \item We can always achieve equality in part (d) via auxiliary randomization.
   Define
@@ -84,7 +84,7 @@ F(x) = \lim_{y \to x^+} F(y)
   where $y \to x^-$ means that $y$ approaches $x$ from the left. Show
   empirically, by revisiting your example in part (e), that for $V \sim
   \mathrm{Unif}(0,1)$, independent of $X$, and for any $t$,      
-  \marginpar{\small [1 pt]}
+  \marginpar{\small [2 pts]}
   \[
   \P(F^*(X; V) \leq t) = t.
   \]
