--- a/lectures/conformal/conformal.tex
+++ b/lectures/conformal/conformal.tex
@@ -52,7 +52,7 @@ The basic goal of conformal prediction is as follows. Let $(X_i,Y_i) \sim P$,
 $i=1,\dots,n$ be i.i.d.\ feature and response pairs, from a distribution 
 $P$ on $\cX \times \cY$. For concreteness, we can think of the feature space as
 say, $\cX = \R^d$, and the response space as $\cY = \R$, though this need not be 
-the case in general. Let $\alpha \in [0,1]$ be and a nominal error level. Then
+the case in general. Let $\alpha \in (0,1)$ be and a nominal error level. Then
 we want to find a \emph{prediction band}, 
 \[
 \hC_n : \cX \to \{ \text{subsets of $\cY$} \},
