--- a/lectures/conformal/conformal.tex
+++ b/lectures/conformal/conformal.tex
@@ -646,8 +646,8 @@ R_{n+1}^{(x,y)} &= |y-\hf_{n,(x,y)}(x)|.
 Then we define a conformal set
 \begin{equation}
 \label{eq:cset_full}
-\hC_n(x) = \Big\{ y \in \R : R_{n+1}^{(x,y)} \leq \text{$\lceil (1-\alpha)(n+1) 
-  \rceil$ smallest of $R_1^{(x,y)}, \dots, R_n^{(x,y)}$} \Big\}.
+\hC_n(x) = \Big\{ y : R_{n+1}^{(x,y)} \leq \text{$\lceil (1-\alpha)(n+1) \rceil$
+  smallest of $R_1^{(x,y)}, \dots, R_n^{(x,y)}$} \Big\}. 
 \end{equation}
 The guarantee we get is that 
 \begin{equation}
