Closure of range

--- a/homeworks/homework4/homework4.tex
+++ b/homeworks/homework4/homework4.tex
@@ -59,7 +59,7 @@ F(x) = \lim_{y \to x^+} F(y)
   \[
   F(Q(t)) \geq t,
   \]
-  with strict inequality if and only if $t$ is not in the range of $F$. 
+  with equality if and only if $t$ is in the closure of the range of $F$. 
 
 \item Use parts (b) and (c) to prove that if $X$ is distributed according to
   $F$, then $F(X)$ is sub-uniform, which means that for any $t$, 
