--- a/lectures/conformal_ds/conformal_ds.tex
+++ b/lectures/conformal_ds/conformal_ds.tex
@@ -21,12 +21,14 @@ In this lecture we cover conformal (or conformal-like) methods that apply beyond
 the i.i.d.\ setting. This is a very active and recent topic of research, and
 it's possible (or even likely) that what's considered fundamental in this area  
 will change in the next couple of years. Until then, there will be numerous
-interesting topics from which we can ``pick and choose'' for a lecture like this
-one. We've chosen three such topics (and shamelessly, for two of the topics,
-you'll notice an overlap between the authors list and the author of these
-lecture notes).  
+topics from which we can ``pick and choose'' for a lecture like this one. We've
+chosen two such topics---and shamelessly, for each, you'll notice an overlap 
+between the authors list and the author of these lecture notes. There is plenty
+of other interesting work out there that we can't cover in just one lecture. 
 
 \section{Likelihood-weighted conformal prediction}
+
+\def\tP{\tilde{P}}
 
 We first cover a likelihood-weighted conformal prediction method, due to
 \citet{tibshirani2019conformal}. A primary motivation will be the setting of  
@@ -35,18 +37,17 @@ We first cover a likelihood-weighted conformal prediction method, due to
 \label{eq:cov_shift}
 \begin{gathered}
 (X_i, Y_i) \sim P = P_X \times P_{Y|X}, \; \text{independently, for
-  $i=1,\dots,n$} , \\
-(X_{n+1}, Y_{n+1}) \sim \widetilde{P} = \widetilde{P}_X \times P_{Y|X}, \;
-\text{independently}.
+  $i=1,\dots,n$}, \\ 
+(X_{n+1}, Y_{n+1}) \sim \tP = \tP_X \times P_{Y|X}, \; \text{independently}. 
 \end{gathered}
 \end{equation}
-Notice that the conditional distribution of $Y|X$ is assumed to be the same for 
+Notice that the conditional distribution of $Y|X$ is assumed to be the same for
 both the training and test data, but the distribution of $X$ is allowed to
-change, i.e., we allow \smash{$\widetilde{P}_X \not= P_X$}. This is a general
-framework of great interest, because it encompasses may important problem
-settings. For example, we could have done some kind of structured covariate
-sampling for our training set (demographically, geographically, etc.) but then
-we do prediction ``in the wild'', where the mix of covariates is different.
+change, i.e., we allow \smash{$\tP_X \not= P_X$}. This is a general framework of
+great interest, because it encompasses may important problem settings. For
+example, we could have done some kind of structured covariate sampling for our
+training set (demographically, geographically, etc.) but then we do prediction
+``in the wild'', where the mix of covariates is different.
 
 The first thing we could ask is: does this even matter for conformal prediction?
 That is, if we observed data according to \eqref{eq:cov_shift}, and computed the 
@@ -206,9 +207,10 @@ Let $Z_i$, $i=1,\dots,n+1$ be weighted exchangeable random variables, with
 respect to weight functions $w_1,\dots,w_{n+1}$. Assume without loss of
 generality that these are distinct almost surely. Let 
 \[
-R_i = V\big( Z_i; \, \{Z_1,\dots,Z_{n+1}\} \big), \quad i=1,\dots,n+1, 
+R_i = V(Z_i; \, Z_1,\dots,Z_{n+1}), \quad i=1,\dots,n+1, 
 \]
-where $V$ is an arbitrary score function, and define
+where $V$ is an arbitrary score function that is symmetric in its last $n+1$
+arguments, and define
 \begin{equation}
 \label{eq:weighted_prob}
 p^w_i(z_1,\dots,z_{n+1}) = 
@@ -228,8 +230,8 @@ p^w_i(Z_1,\dots,Z_{n+1}) \delta_{R_i} + p^w_{n+1}(Z_1,\dots,Z_{n+1})
 \begin{proof}
 We follow the same general strategy from the alternate proof of
 \eqref{eq:quantile}. Let $E_z$ denote the event that
-$\{Z_1,\dots,Z_{n+1}\}=\{z_1,\dots,z_{n+1}\}$, and let $r_i=V(z_i;
-\{z_1,\dots,z_{n+1}\})$, for $i=1,\dots,n+1$. Let $f$ be the density function
+$\{Z_1,\dots,Z_{n+1}\}=\{z_1,\dots,z_{n+1}\}$, and let $r_i=V(z_i; \,
+z_1,\dots,z_{n+1})$, for $i=1,\dots,n+1$. Let $f$ be the density function 
 of the joint sample $Z_1,\dots,Z_{n+1}$. For each $i$, we have
 \begin{equation}
 \label{eq:general_calc}
@@ -300,23 +302,24 @@ nominal error level $\alpha \in (0,1)$ as follows. Let
 \begin{equation}
 \label{eq:scores}
 \begin{aligned}
-R_i^{(x,y)} &= V\Big( (X_i,Y_i); \, \{Z_1,\dots,Z_n,(x,y)\} \Big), \quad
+R_i^{(x,y)} &= V\Big( (X_i,Y_i); \, Z_1,\dots,Z_n,(x,y)\Big), \quad
   i=1,\dots,n, \\ 
-R_{n+1}^{(x,y)} &= V\Big( (x,y); \, \{Z_1,\dots,Z_n,(x,y)\} \Big), 
+R_{n+1}^{(x,y)} &= V\Big( (x,y); \, Z_1,\dots,Z_n,(x,y) \Big), 
 \end{aligned}
 \end{equation}
-for an arbitrary score function $V$, and
+for an arbitrary score function $V$ that is symmetric in its last $n+1$
+arguments, and 
 \begin{equation}
 \label{eq:weighted_conf}
-\hC_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha; 
-\, \sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}} \,+\, 
+\hC^w_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha; 
+\, \sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}} + 
 p^w_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \delta_\infty \bigg) \bigg\},  
 \end{equation}
 where \smash{$p^w_i$}, $i=1,\dots,n+1$ are as in \eqref{eq:weighted_prob}.  
-Then \smash{$\hC_n$} satisfies    
+Then \smash{$\hC^w_n$} satisfies    
 \begin{equation}
 \label{eq:weighted_cov}
-\P\big( Y_{n+1} \in \hC_n(X_{n+1}) \big) \geq 1-\alpha.  
+\P\big( Y_{n+1} \in \hC^w_n(X_{n+1}) \big) \geq 1-\alpha.  
 \end{equation}
 \end{theorem}
 
@@ -324,7 +327,7 @@ Then \smash{$\hC_n$} satisfies
 Abbreviate \smash{$R_i=R_i^{(X_{n+1},Y_{n+1})}$}, $i=1,\dots,n+1$. By
 construction 
 \[
-Y_{n+1} \in \hC_n(X_{n+1}) \iff 
+Y_{n+1} \in \hC^w_n(X_{n+1}) \iff 
 R_{n+1} \leq \Quantile\bigg( 1-\alpha; \, \sum_{i=1}^n p^w_i(Z_1,\dots,Z_{n+1}) 
 \delta_{R_i} + p^w_{n+1}(Z_1,\dots,Z_{n+1}) \delta_\infty \bigg),
 \]
@@ -339,7 +342,7 @@ external data set. For example, if we take it to be $V(x,y) = |y-\mu_0(x)|$,
 where $\mu_0$ has been fit on adata set $Z_0$, then \eqref{eq:weighted_conf}
 simplifies to       
 \[
-\hC_n(x) = \mu_0(x) \pm \Quantile\bigg(1-\alpha; \, 
+\hC^w_n(x) = \mu_0(x) \pm \Quantile\bigg(1-\alpha; \, 
 \sum_{i=1}^n p^w_i\big( Z_1,\ldots,Z_n,(x,y) \big) \delta_{|Y_i - \mu_0(X_i)|}
 + p^w_{n+1}\big( Z_1,\ldots,Z_n,(x,y) \big) \delta_\infty \bigg).
 \]
@@ -365,9 +368,10 @@ It is also worth noting that we can achieve exact coverage by using auxiliary
 randomization directly in quantile form, so that \eqref{eq:weighted_conf}
 becomes:      
 \[
-\hC^*_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \mathrm{RandQuant}\bigg( 1-\alpha;  
-\, \sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}} \,+\, 
-p^w_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \delta_\infty \bigg) \bigg\},  
+\hC^{w,*}_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \mathrm{RandQuant}\bigg( 
+1-\alpha; \, \sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big)
+\delta_{R_i^{(x,y)}} + p^w_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \delta_\infty
+\bigg) \bigg\},    
 \]
 where $\mathrm{RandQuant}(\beta; P)$ is a suitably-randomized level $\beta$ 
 quantile, defined for any discrete distribution $P$, as follows. First we
@@ -390,9 +394,9 @@ Formally, these are \smash{$\lceil \beta \rceil_P = \min\{ \tau \in
 \]
 (In the ambigous case when $\beta \in \mathrm{range}(F)$, we interpret
 $\mathrm{RandQuant}(\beta; P) = \Quantile(\beta; P)$.) The randomized weighted
-conformal set \smash{$\hC^*_n$} defined above then satisfies 
+conformal set \smash{$\hC^{w,*}_n$} defined above then satisfies 
 \[
-\P\big( Y_{n+1} \in \hC^*_n(X_{n+1}) \big) = 1-\alpha.  
+\P\big( Y_{n+1} \in \hC^{w,*}_n(X_{n+1}) \big) = 1-\alpha.  
 \]
 
 \subsection{Conformal prediction for covariate shift}
@@ -408,29 +412,30 @@ experimental design \citep{fannjiang2022conformal}, and survival analysis
 
 \begin{corollary}
 \label{cor:weighted_conf_cs}
-Assume that $Z_i=(X_i,Y_i) \in \cX \times \cY$, $i=1,\dots,n+1$ obey the model 
-\eqref{eq:cov_shift}.  Assume that \smash{$\widetilde{P}_X$} is absolutely
-continuous with respect to $P_X$, and denote \smash{$w=d\widetilde{P}_X/dP_X$}.
-Define a weighted conformal set (based on the first $n$ samples) at a point $x
-\in \cX$, with nominal error level $\alpha \in (0,1)$, by 
+Assume that $Z_i=(X_i,Y_i)$, $i=1,\dots,n+1$ obey the model
+\eqref{eq:cov_shift}.  Assume that \smash{$\tP_X$} is absolutely continuous with
+respect to $P_X$, and denote \smash{$w=d\tP_X/dP_X$}.  Define a weighted
+conformal set (based on the first $n$ samples) at a point $x \in \cX$, with
+nominal error level $\alpha \in (0,1)$, by 
 \begin{equation}
 \label{eq:weighted_conf_cs}
-\hC_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha; 
+\hC^w_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha; 
 \, \sum_{i=1}^n \pi^w_i(x) \delta_{R_i^{(x,y)}} + \pi^w_{n+1}(x) \delta_\infty 
 \bigg) \bigg\}, 
 \end{equation}
 where \smash{$R_i^{(x,y)}$}, $i=1,\ldots,n+1$ are conformity scores as in
-\eqref{eq:scores}, for an arbitrary score function $V$, and
+\eqref{eq:scores}, for an arbitrary score function $V$ that is symmetric in its
+last $n+1$ arguments, and
 \begin{equation}
 \label{eq:weighted_prob_cs}
 \pi^w_i(x) = \frac{w(X_i)}{\sum_{j=1}^n w(X_j) + w(x)}, \; i=1,\ldots,n, 
 \quad \text{and} \quad 
 \pi^w_{n+1}(x) = \frac{w(x)}{\sum_{j=1}^n w(X_j) + w(x)}. 
 \end{equation}
-Then \smash{$\hC_n$} satisfies 
+Then \smash{$\hC^w_n$} satisfies 
 \begin{equation}
 \label{eq:weighted_cov_cs}
-\P\big( Y_{n+1} \in \hC_n(X_{n+1}) \big) \geq 1-\alpha. 
+\P\big( Y_{n+1} \in \hC^w_n(X_{n+1}) \big) \geq 1-\alpha. 
 \end{equation}
 \end{corollary}
 
@@ -456,17 +461,16 @@ special case (via a particular score function) and exact coverage in
 
 Looking back at Figure \ref{fig:airfoil}, the middle row provides an example of
 the conformal set in \eqref{eq:weighted_conf_cs}, with oracle knowledge (in
-orange) of the likelihood ratio weight function
-\smash{$w=d\widetilde{P}_X/dP_X$}. We can see from the middle left panel that  
-its coverage is restored compared to the naive application of conformal in the
-covariate shift problem, from the top row. However, we also see that the
-dispersion in the coverage histogram from weighted conformal (over the 5000
-repetitions of the experiment) is larger than that of usual conformal without
-covariate shift (in red), from the top row. This is because, with non-uniform
-weights due to covariate shift, we are effectively operating at a lower
-sample size. The middle row thus also displays the results (in purple) of usual
-conformal prediction in a problem without covariate shift but at the same
-effective sample size, defined as   
+orange) of the likelihood ratio weight function \smash{$w=d\tP_X/dP_X$}. We can
+see from the middle left panel that its coverage is restored compared to the
+naive application of conformal in the covariate shift problem, from the top
+row. However, we also see that the dispersion in the coverage histogram from
+weighted conformal (over the 5000 repetitions of the experiment) is larger than
+that of usual conformal without covariate shift (in red), from the top row. This
+is because, with non-uniform weights due to covariate shift, we are effectively
+operating at a lower sample size. The middle row thus also displays the results
+(in purple) of usual conformal prediction in a problem without covariate shift
+but at the same effective sample size, defined as
 \[
 \hat{n} = \bigg( \frac{\sum_{i=1}^n |w(X_i)|}{\sqrt{\sum_{i=1}^n |w(X_i)|^2}}
 \bigg)^2 = \bigg( \frac{\|w(X_{1:n})\|_1}{\|w(X_{1:n})\|_2} \bigg)^2,
@@ -479,17 +483,17 @@ prediction intervals, as shown in the middle right panel.
 
 \subsection{Estimating the likelihood ratio from unlabeled data}
 
-Here we describe how to estimate \smash{$w=d\widetilde{P}_X/dP_X$}, the  
-likelihood ratio of interest, when we have access to unlabeled data
-$X_{n+1},\dots,X_{n+m} \in \cX$ at prediction time. (This is sometimes called the
-transductive or semi-supervised setting in machine learning.) We can use any
-classifier that estimated probabilities of class membership, such as logistic
-regression or random forests. We proceed as follows: we train the classifier on
-feature-class pairs $(X_i,C_i)$, $i=1,\ldots,n+m$,  where $C_i=0$ for
-$i=1,\ldots,n$ and $C_i=1$ for $i=n+1,\ldots,n+m$. Noting that  
+Here we describe how to estimate \smash{$w=d\tP_X/dP_X$}, the likelihood ratio
+of interest, when we have access to unlabeled data $X_{n+1},\dots,X_{n+m} \in
+\cX$ at prediction time. (This is sometimes called the transductive or
+semi-supervised setting in machine learning.) We can use any classifier that
+estimated probabilities of class membership, such as logistic regression or
+random forests. We proceed as follows: we train the classifier on feature-class
+pairs $(X_i,C_i)$, $i=1,\ldots,n+m$,  where $C_i=0$ for $i=1,\ldots,n$ and
+$C_i=1$ for $i=n+1,\ldots,n+m$. Noting that   
 \[
 \frac{\P(C=1 | X=x)}{\P(C=0 | X=x)}
-= \frac{\P(C=1)}{\P(C=0)} \frac{d\widetilde{P}_X}{dP_X}(x),
+= \frac{\P(C=1)}{\P(C=0)} \frac{d\tP_X}{dP_X}(x),
 \]
 we can thus view the conditional odds ratio $w(x)=\P(C=1|X=x)/\P(C=0|X=x)$ as an
 equivalent representation for the oracle weight function---since we actually
@@ -524,40 +528,41 @@ essentially already follows from what we proved in Lemma
 
 \begin{theorem}
 \label{thm:weighted_conf_gen}
-Assume that $Z_i=(X_i,Y_i) \in \cX \times \cY$, $i=1,\dots,n+1$ are distributed
-according to:
+Assume that $Z_i=(X_i,Y_i)$, $i=1,\dots,n+1$ are distributed according to:
 \begin{gather*}
-(X_1,\dots,X_{n+1}) \sim Q, \\
+(X_1,\dots,X_{n+1}) \sim \Lambda, \\
 Y_i|X_i \sim P_{Y|X}, \; \text{independently, for $i=1,\dots,n$}.
 \end{gather*}
-Let $f$ denote the density (or mass function, or more generally, Radom-Nikodym 
-derivative with respect to an arbitrary base measure) of $Q$. Define a weighted
-conformal set (based on the first $n$ samples) at a point $x \in \cX$, with
-nominal error level $\alpha \in (0,1)$, by  
+Let $\lambda$ denote the density (or mass function, or more generally,
+Radom-Nikodym derivative with respect to an arbitrary base measure) of
+$Q$. Define a weighted conformal set (based on the first $n$ samples) at a point
+$x \in \cX$, with nominal error level $\alpha \in (0,1)$, by   
 \begin{equation}
 \label{eq:weighted_conf_gen}
-\hC_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha; 
-\, \sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}} \,+\, 
-p^w_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \delta_\infty \bigg) \bigg\},  
+\hC^\lambda_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha;  
+\, \sum_{i=1}^n p^\lambda_i\big( Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}}
++ p^\lambda_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \delta_\infty \bigg) \bigg\},  
 \end{equation}
 where \smash{$R_i^{(x,y)}$}, $i=1,\ldots,n+1$ are conformity scores as in
-\eqref{eq:scores}, for an arbitrary score function $V$, and
+\eqref{eq:scores}, for an arbitrary score function $V$ that is symmetric in its 
+last $n+1$ arguments, and
 \begin{equation}
 \label{eq:weighted_prob_gen}
-p^w_i(z_1,\dots,z_{n+1}) = 
-\frac{\sum_{\sigma : \sigma(n+1)=i} f(z_{\sigma(1)},\dots, z_{\sigma(n+1)})}
-{\sum_\sigma f(z_{\sigma(1)},\dots, z_{\sigma(n+1)})}, \quad i=1,\dots,n+1. 
+p^\lambda_i(z_1,\dots,z_{n+1}) = 
+\frac{\sum_{\sigma : \sigma(n+1)=i} \lambda(z_{\sigma(1)},\dots,
+  z_{\sigma(n+1)})} {\sum_\sigma \lambda(z_{\sigma(1)},\dots, z_{\sigma(n+1)})},
+\quad i=1,\dots,n+1.  
 \end{equation}
-Then \smash{$\hC_n$} satisfies 
+Then \smash{$\hC^\lambda_n$} satisfies 
 \begin{equation}
 \label{eq:weighted_cov_gen}
-\P\big( Y_{n+1} \in \hC_n(X_{n+1}) \big) \geq 1-\alpha. 
+\P\big( Y_{n+1} \in \hC^\lambda_n(X_{n+1}) \big) \geq 1-\alpha. 
 \end{equation}
 \end{theorem}
 
 Computation of the weights in \eqref{eq:weighted_prob_gen} is now even more
 difficult than \eqref{eq:weighted_prob} in the weighted exchangeable setting
-(even more difficult than a matrix permanent, since $f$ could in principle
+(even more difficult than a matrix permanent, since $\lambda$ could in principle 
 depend in a complicated way on the order of its inputs). That said, the above
 theorem still produces a conformal set \eqref{eq:weighted_conf_gen} with the
 very general guarantee \eqref{eq:weighted_cov_gen}, which is interesting.
@@ -567,19 +572,53 @@ some kind of Markov structure.
 
 \section{Custom-weighted conformal prediction}
 
+\def\tw{\tilde{w}}
+\def\dtv{\mathsf{d}_{\mathsf{TV}}}
+
 We next cover a custom-weight conformal prediction method, due to
-\citet{barber2022conformal}. Compared to the likelihood-weighted method covered 
-in this last section, the weights considered in the current section will be
+\citet{barber2022conformal}. In comparison to the likelihood-weighted method
+in the previous section, the weights considered in the current section will be
 \emph{fixed} (not a function of the data) but \emph{arbitrary}. And the theory,
-as we'll see, is also very different; in a sense, it is much more general in scope.          
+as we'll see, is also very different; in a sense, it is much more general in
+scope.  
 
-\section{Adaptive conformal inference}
+Let $w_i \in [0,1]$, $i=1,\dots,n$ be fixed and arbitrary weights, and define 
+\[
+\tw_i = \frac{w_i}{w_1 + \cdots + w_n + 1}, \; i=1,\ldots,n, 
+\quad \text{and} \quad 
+\tw_{n+1} = \frac{1}{w_1 + \cdots + w_n + 1}.
+\]
+Consider a weighted conformal prediction set from training data $(X_i,Y_i)$,
+$i=1,\dots,n$, defined as follows:
+\begin{equation}
+\label{eq:weighted_conf_nex}
+\hC^w_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha; 
+\, \sum_{i=1}^n \tw_i \, \delta_{R_i^{(x,y)}} + \tw_{n+1} \, \delta_\infty
+\bigg) \bigg\},   
+\end{equation}
+where \smash{$R_i^{(x,y)}$}, $i=1,\ldots,n+1$ are conformity scores as in
+\eqref{eq:scores}, for an arbitrary score function $V$ that is symmetric in its
+last $n+1$ arguments. 
 
-Lastly we cover a conformal-like method, for sequential prediction problems, due 
-to \citet{gibbs2021adaptive}. In a way, this is a signifcant departure from the
-methods we've seen thus far, since the base idea isn't specific to conformal
-prediction at all. Its core guarantee is quite simple to prove, yet at the same
-time, quite strong.    
+\citet{barber2022conformal} prove the following result. For \emph{any} joint
+distribution of $Z_i=(X_i,Y_i)$, $i=1,\dots,n+1$, and any fixed weights $w_i \in
+[0,1]$, $i=1,\dots,n$ the set \smash{$\hC^w_n$} satisfies
+\begin{equation}
+\label{eq:weighted_cov_nex}
+\P\big( Y_{n+1} \in \hC^w_n(X_{n+1}) \big) \geq 1-\alpha - \sum_{i=1}^n 
+\tw_i \cdot \dtv(R(Z), R(Z^i)),
+\end{equation}
+where $\dtv(A,B)$ denotes the total variation distance between (the
+distributions of) two random variables $A,B$. To understand this result, we
+still need a few more pieces of notation: 
+\begin{itemize}
+\item we denote $Z = (Z_1,\dots,Z_{n+1})$ and denote by $Z^i$ this vector after 
+  swapping components $i$ and $n+1$; 
+\item we denote by $R(Z)$ the vector of scores, that has components $R(Z)_j =
+  V(Z_j; Z)$; and we denote by $R(Z^i)$ the vector of scores had the data
+  sequence been $Z^i$, that has components \smash{$R(Z^i)_j = V(Z^i_j; Z^i)$}.  
+\end{itemize}
+Thus we can interpret the result in \eqref{eq:weighted_cov_nex} as follows. 
 
 \bibliographystyle{plainnat}
 \bibliography{../../common/ryantibs}
